# technopark-algorithms

./: .gitignore  CMakeLists.txt  README.md
module_1/1_3_task/: CMakeLists.txt  input.txt  main.cpp
module_1/2_1_task/: CIntVector.cpp  CIntVector.h  CMakeLists.txt  input.txt  main.cpp
module_1/3_3_task/: CMakeLists.txt  main.cpp
module_1/4_3_task/: CMakeLists.txt  Queue.cpp  Queue.h  Stack.cpp  Stack.h  input.txt  main.cpp
module_1/5_2_task/: CMakeLists.txt  Stack.cpp  Stack.h  input.txt  main.cpp
module_1/6_2_task/: CMakeLists.txt  main.cpp
module_1/7_2_task/: CMakeLists.txt  Request.h  input.txt  main.cpp
module_2/1_1_task/: CBox.cpp  CBox.h  CMakeLists.txt  input.txt  main.cpp
module_2/2_2_task/: CMakeLists.txt  MinHeap.cpp  MinHeap.h  input.txt  main.cpp
module_2/3_3_task/: CMakeLists.txt  LineSegment.h  MaxHeap.cpp  MaxHeap.h  input.txt  main.cpp
module_2/4_1_task/: CMakeLists.txt  main.cpp
module_2/5_3_task/: CMakeLists.txt  InversionCounter.cpp  InversionCounter.h  main.cpp
module_2/6_3_task/: CMakeLists.txt  input.txt  main.cpp
module_2/7_task/: CMakeLists.txt  input.txt  main.cpp
module_3/1_1_task/: CMakeLists.txt  StringSet.cpp  StringSet.h  main.cpp
module_3/2_3_task/: CMakeLists.txt  main.cpp
module_3/3_1_task/: CMakeLists.txt  main.cpp
module_3/4_1_task/: CMakeLists.txt  input.txt  main.cpp
