cmake_minimum_required(VERSION 3.6)
project(tasks)

# 1st modele
add_subdirectory(module_1/1_3_task)
add_subdirectory(module_1/2_1_task)
add_subdirectory(module_1/3_3_task)
add_subdirectory(module_1/4_3_task)
add_subdirectory(module_1/5_2_task)
add_subdirectory(module_1/6_2_task)
add_subdirectory(module_1/7_2_task)

# 2nd module
add_subdirectory(module_2/1_1_task)